# tailvad

./: README.md  main.py  pyproject.toml
src/: main.py  tailscale_utilities.py
